kustomize/overlays/development/patches/ingress-patch.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: myapp-ingress
spec:
  rules:
    - host: myapp-development.azurelaboratory.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: myapp-service
                port:
                  number: 3000
  tls:
    - secretName: myapp-tls
      hosts:
        - myapp-development.azurelaboratory.com
